feat: functional resource hook